<resources>
    <string name="app_name">陌梦车伴</string>
    <string name="title_activity_login">手机号登录</string>

    <!-- 用于登录的string -->
    <string name="prompt_email">请输入手机号（+86）</string>
    <string name="prompt_password">请输入密码</string>
    <string name="register_prompt_password">设置登录密码，不少于6位</string>
    <string name="action_sign_in">登录</string>
    <string name="action_next">下一步</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">此手机号无效</string>
    <string name="error_invalid_password">密码长度不小于6位</string>
    <string name="error_incorrect_password">密码输入错误</string>
    <string name="error_field_required">此项为必填项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone_number_login">手机号登录</string>
    <string name="register_login">注册</string>
    <string name="phone_register_login">手机号注册</string>
    <string name="visitor_login">游客试用</string>
    <string name="third_party_login">其他登录方式</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="person_title">个人中心</string>
    <string name="healthreporter">健康周报</string>
    <string name="privatedoctor">私人医生</string>
    <string name="mymessage">我的消息</string>
    <string name="mymoney">我的钱包</string>
    <string name="about">关于陌梦车伴</string>
    <string name="feedback">帮助与反馈</string>

    <!--ToolBar衍生出的变量-->
    <string name="navigation_drawer_open">打开侧边导航</string>
    <string name="navigation_drawer_close">关闭侧边导航</string>
    <string name="action_settings">设置</string>
    <string name="string_consult">咨询</string>
    <string name="string_check">检测</string>
    <string name="string_nav">导航</string>

    <string name="lorem_ipsum">渐变动画（也叫消失）通常指渐渐的淡出某个UI组件，同时同步地淡入另一个。当App想切换内容或View的情况下，这种动画很有用。渐变简短不易察觉，同时又提供从一个界面到下一个之间流畅的转换。如果在需要转换的时候没有使用任何动画效果，这会使得转换看上去感到生硬而仓促。渐变动画（也叫消失）通常指渐渐的淡出某个UI组件，同时同步地淡入另一个。当App想切换内容或View的情况下，这种动画很有用。渐变简短不易察觉，同时又提供从一个界面到下一个之间流畅的转换。如果在需要转换的时候没有使用任何动画效果，这会使得转换看上去感到生硬而仓促。渐变动画（也叫消失）通常指渐渐的淡出某个UI组件，同时同步地淡入另一个。当App想切换内容或View的情况下，这种动画很有用。渐变简短不易察觉，同时又提供从一个界面到下一个之间流畅的转换。如果在需要转换***********************************************************************************************************************************************的时候没有使用任何动画效果，这会使得转换看上去感到生硬而仓促。</string>
    <string name="dash">-</string>
</resources>
