<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.power.mobile_health.Activity.LoginMainActivity"
    android:background="@color/colorWhile">
    <ImageView
        android:id="@+id/iv_loginMainBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_loginlogo"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:src="@mipmap/login_logo"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/bt_phoneLogin"
                android:layout_width="@dimen/button_login_main_width"
                android:layout_height="@dimen/button_login_main_height"
                android:text="@string/phone_number_login"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_button_selector"
                android:onClick="enterPhoneLogin"
                android:textColor="@drawable/login_button_text_color_selector"
                android:layout_below="@+id/iv_loginlogo"
                android:layout_marginTop="60dp"/>
            <Button
                android:id="@+id/bt_register"
                android:layout_width="@dimen/button_login_main_width"
                android:layout_height="@dimen/button_login_main_height"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/bt_phoneLogin"
                android:layout_marginTop="10dp"
                android:text="@string/register_login"
                android:textSize="17sp"
                android:textColor="@drawable/login_button_text_color_selector"
                android:background="@drawable/login_button_selector"
                android:onClick="enterRegister"/>
            <TextView
                android:id="@+id/tv_visitor_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_login"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/bt_register"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlackLow"
                android:onClick="enterVisitorLogin"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/third_party_title_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_above="@+id/third_party_layout"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/third_party_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/third_party_login"
                android:textColor="@color/colorNormalLow"
                android:textSize="14sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/third_party_title"
                android:background="@color/colorNormalRoute"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:layout_toRightOf="@id/third_party_title"
                android:background="@color/colorNormalRoute"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/third_party_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp">
            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:onClick="onClick"
                android:src="@drawable/login_btn_wechat_selector"/>
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_centerInParent="true"
                android:src="@drawable/login_btn_qq_selector"/>
            <ImageView
                android:id="@+id/iv_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:onClick="onClick"
                android:src="@drawable/login_btn_sina_selector"/>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
